# packet-tracer-visual-mcp

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: automatic-port-allocation.md  configuration-templates.md  create-pts-module.md  fast-safe-mode.md  packet-tracer-extension-notes.md  validation-modes.md
examples/: campus-course-design.md  codex-config.toml  prompts.md
extension/: packet-tracer-visual-mcp-script-engine.js  ptv-smoke-test.js
extension/source/: main.js  pt_api.js  runcode.js  window.js
extension/source/interface/: bridge.js  index.html
scripts/: build_script_engine.py  check_project.py
skill/: SKILL.md
src/pt_visual_mcp/: __init__.py  bridge.py  campus.py  config_templates.py  server.py  tools.py  validation.py
