[project]
name = "packet-tracer-visual-mcp"
version = "0.1.0"
description = "Original MCP bridge for Cisco Packet Tracer lab generation, IOS automation, and campus-network presets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "lyfhf" }]
license = { text = "MIT" }
dependencies = [
  "mcp>=1.0.0",
  "websockets>=12.0",
]

[project.scripts]
pt-visual-mcp = "pt_visual_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pt_visual_mcp"]
